[tool.poetry]
name = "forest-cover"
version = "0.1.0"
description = ""
authors = ["Andrew <andslobby@gmail.com>"]


[tool.poetry.scripts]
train = "forest_cover.run:train"

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "1.22.0"
pandas = "1.3.5"
pandas-profiling = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
