[tool.poetry]
name = "forest-cover"
version = "0.1.0"
description = ""
authors = ["Andrew <andslobby@gmail.com>"]


[tool.poetry.scripts]
train = "forest_cover.run:train"
eda = "forest_cover.eda:eda"

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "1.22.0"
pandas = "1.3.5"
pandas-profiling = "^3.2.0"
sklearn = "^0.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
